--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
-body {
-background-color: gray;
+* {
+  box-sizing: border-box;
+}
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  width: 400px;
+}
+
+.container>div {
+  border: 1px solid black;
+  height: 25px;
+  width: 25px;
 }
