--- a/style.css
+++ b/style.css
@@ -1,15 +1,19 @@
 * {
   box-sizing: border-box;
+  display: flex;
+  justify-content: center;
 }
 
 .container {
+  margin-top: 60px;
   display: flex;
   flex-wrap: wrap;
-  width: 400px;
+  width: 640px;
+  
 }
 
 .container>div {
-  border: 1px solid black;
-  height: 25px;
-  width: 25px;
+  border: .1px solid gray;
+  height: 40px;
+  width: 40px;
 }
