--- a/style.css
+++ b/style.css
@@ -2,12 +2,31 @@
   box-sizing: border-box;
 }
 
-body {
-display: flex;
-justify-content: center;
-margin-top: 60px;}
+.page {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  /* margin-top: 60px; */
+}
+
+button {
+  justify-content: center;
+  width: 100px;
+  height: 38px;
+  margin-top: 16px;
+  margin-bottom: 48px;
+  border-radius: 12px;
+  transition: .4s;
+}
+
+button:hover {
+  background-color: #64dcb0; /* Green */
+  color: rgb(9, 9, 9);
+}  
 
 .container {
+  justify-content: center;
   display: flex;
   flex-wrap: wrap;
   width: 640px;
